reservasi dokter pasien pegawai

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  # HTTP client for calling MockAPI
+  http: ^0.13.6
+  # Image picker for selecting photos
+  image_picker: ^0.8.7+5
   dio: ^5.6.0 
   shared_preferences: ^2.3.2
 dev_dependencies:
